--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.11.1 -----------------------------------------------------------
+### Settings V2.12.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
  
@@ -79,6 +79,10 @@
   #Daten an Wetter.com senden (leer lassen falls nicht gewünscht)?
    WETTERCOM_ID=
    WETTERCOM_PW=
+ 
+ #Fix aktivieren bei fehlerhafter Außentemperatur [true/false] / default: false
+ #Bei unplausiblem Messwert wird kein Datenpaket an den ioB geschickt
+  FIX_AUSSENTEMP=false
  
 
 
