Fixed authentication, Set ack flag, Added option to ignore SSL errors
Fixed authentication for Simple-API setBulk requests (user&pass must be send as GET params),
Set ack flag on setBulk requests (requires PR ioBroker/ioBroker.simple-api#145),
Added option to ignore SSL errors if HTTPS is used together with a self-signed certificate

--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,14 +1,14 @@
 ### Settings V2.13.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
- 
+
  #Verhalten bei Kommunikationsfehler [true/false] / default: false / Soll der Datenpunkt automatisch resettet werden?
   RESET_KOMFEHLER=false
- 
+
  #Logging einschalten [true/false] / default: false / schreibt die Datenstrings der Station in eine Datei
   logging=false
 
- #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx] 
+ #ioBroker-IP und Port der Simple-Restful-API [xxx.xxx.xxx.xxx:xxxxx]
   IPP=192.168.1.3:8087
 
  #Protokoll der Wetterstation [1/2/9] / 1=Wunderground ; 2=Ecowitt ; 9=DNS / default: 2
@@ -16,7 +16,7 @@
 
  #Anzahl der vorhandenen Zusatzsensoren / default: 0
   ANZAHL_WH31=0
-  ANZAHL_DP35=0  
+  ANZAHL_DP35=0
   ANZAHL_DP40=0
   ANZAHL_DP50=0
   ANZAHL_DP60=0
@@ -28,7 +28,10 @@
 
  #Protokoll (HTTP oder HTTPS) / default: HTTP
   WEB=HTTP
- 
+
+ #Ignoriere Zertifikatsfehler bei der Simple-Restful-API [true/false] / default: false / nötig bei eigenen Zertifikaten
+  WEB_IGN_SSL_ERROR=false
+
  #User-Authentifizierung falls benutzt; sonst leer lassen
   AUTH_USER=
   AUTH_PASS=
@@ -59,7 +62,7 @@
  # DIFF  = gerade eben / vor einer Stunde / vor 23 Stunden / vor einem Tag / vor 12 Tagen
 
   LAST_RAIN=DIFF
- 
+
  #Text-Format für Datenpunkte "Sonnenschein_[Tag|Woche|Monat|Jahr]_Text"
  # zweistellig wird ggf. mit einer führenden "0" aufgefüllt
  # d = Tag(e) 0...n ein- und mehrstellig / h = Stunden 0...n ein- oder mehrstellig
@@ -73,18 +76,18 @@
  # [1] = h:mm                         | 68:02
  # [2] = d Tag/e h Std.               | 2 Tage 20 Std.
  # [3] = d Tag/e, h Std, m Min        | 2 Tage, 20 Std, 2 Min (Anzeige Tage erst bei >0)
-  
+
   SONNENSCHEIN_TXTFORMAT=3
- 
+
 
   #Daten an Wetter.com senden (leer lassen falls nicht gewünscht)?
    WETTERCOM_ID=
    WETTERCOM_PW=
- 
+
  #Fix aktivieren bei fehlerhafter Außentemperatur [true/false] / default: false
  #Bei unplausiblem Messwert wird kein Datenpaket an den ioB geschickt
   FIX_AUSSENTEMP=false
- 
+
 
 
 
@@ -94,7 +97,7 @@
  ###    Für die Registrierung muss "openSenseMap" auf "false" eingestellt sein!            ###
  ###    Erst wenn auch Sensoren angelegt wurden, darf auf "true" umgestellt werden!        ###
  #############################################################################################
-  
+
   #openSenseMap aktivieren [true/false] / default: false
    openSenseMap=false
 
@@ -170,5 +173,5 @@
  #############################################################################################
 
 
-###  Ende Usereinstellungen  
+###  Ende Usereinstellungen
 ###EoF
