--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -80,9 +80,16 @@
   SONNENSCHEIN_TXTFORMAT=3
 
 
-  #Daten an Wetter.com senden (leer lassen falls nicht gewünscht)?
+  #Daten an Wetter.com senden (aktivieren mit WETTERCOM_UPDATE=true)?
+   WETTERCOM_UPDATE=false
    WETTERCOM_ID=
    WETTERCOM_PW=
+   
+ #Daten an Wunderground.com senden (aktivieren mit WUNDERGROUND_UPDATE=true)?
+   WUNDERGROUND_UPDATE=false
+   WUNDERGROUND_ID=
+   WUNDERGROUND_PW=
+   
 
  #Fix aktivieren bei fehlerhafter Außentemperatur [true/false] / default: false
  #Bei unplausiblem Messwert wird kein Datenpaket an den ioB geschickt
