--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -87,8 +87,7 @@
    
  #Daten an Wunderground.com senden (aktivieren mit WUNDERGROUND_UPDATE=true)?
    WUNDERGROUND_UPDATE=false
-   WUNDERGROUND_ID=
-   WUNDERGROUND_PW=
+ #Nur nötig und sinnvoll bei WS_PROTOKOLL=9 (DNS) wenn trotzdem auch Daten weiterhin an Wunderground.com gesendet werden sollen.
    
 
  #Fix aktivieren bei fehlerhafter Außentemperatur [true/false] / default: false
