--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.14.0 -----------------------------------------------------------
+### Settings V2.15.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -80,15 +80,14 @@
   SONNENSCHEIN_TXTFORMAT=3
 
 
-  #Daten an Wetter.com senden (aktivieren mit WETTERCOM_UPDATE=true)?
-   WETTERCOM_UPDATE=false
+  #Daten an Wetter.com senden (leer lassen falls nicht gewünscht)?
    WETTERCOM_ID=
    WETTERCOM_PW=
-   
- #Daten an Wunderground.com senden (aktivieren mit WUNDERGROUND_UPDATE=true)?
+
+
+ #Daten an Wunderground.com senden? [true/false] / default: false
+   #Nur nötig und sinnvoll bei WS_PROTOKOLL=9 (DNS) wenn trotzdem auch Daten weiterhin an Wunderground.com gesendet werden sollen.
    WUNDERGROUND_UPDATE=false
- #Nur nötig und sinnvoll bei WS_PROTOKOLL=9 (DNS) wenn trotzdem auch Daten weiterhin an Wunderground.com gesendet werden sollen.
-   
 
  #Fix aktivieren bei fehlerhafter Außentemperatur [true/false] / default: false
  #Bei unplausiblem Messwert wird kein Datenpaket an den ioB geschickt
