--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.16.0 -----------------------------------------------------------
+### Settings V2.17.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -89,10 +89,13 @@
    WETTERCOM_ID=
    WETTERCOM_PW=
 
-
  #Daten an Wunderground.com senden? [true/false] / default: false
    #Nur nötig und sinnvoll bei WS_PROTOKOLL=9 (DNS) wenn trotzdem auch Daten weiterhin an Wunderground.com gesendet werden sollen.
    WUNDERGROUND_UPDATE=false
+
+ #Windrichtung und -geschwindigkeit der letzten 10 Minuten anstelle aktueller Werte an
+ #windy/OpenSenseMap/wetter.com übertragen? [true/false] / default: false
+  USE_AVG_WIND=false
 
  #Fix aktivieren bei fehlerhafter Außentemperatur [true/false] / default: false
  #Bei unplausiblem Messwert wird kein Datenpaket an den ioB geschickt
