--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.17.0 -----------------------------------------------------------
+### Settings V2.18.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -21,6 +21,7 @@
 
  #Anzahl der vorhandenen Zusatzsensoren / default: 0
   ANZAHL_WH31=0
+  ANZAHL_DP10=0
   ANZAHL_DP35=0
   ANZAHL_DP40=0
   ANZAHL_DP50=0
