--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -21,6 +21,7 @@
 
  #Anzahl der vorhandenen Zusatzsensoren / default: 0
   ANZAHL_WH31=0
+  ANZAHL_WS90=0
   ANZAHL_DP10=0
   ANZAHL_DP35=0
   ANZAHL_DP40=0
