--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.20.0 -----------------------------------------------------------
+### Settings V2.21.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -187,6 +187,22 @@
  ###    Windy - Ende der Einstellungen    ####################################################
  #############################################################################################
 
+
+
+ #############################################################################################
+ ###    AWEKAS - Einstellungen (nur nötig falls AWEKAS benutzt werden soll)                ###
+ #############################################################################################
+
+  #AWEKAS aktivieren [true/false] / default: false
+   use_awekas=false
+
+  #AWEKAS Login Username und Password
+   AWEKAS_USER=
+   AWEKAS_PW=
+
+ #############################################################################################
+ ###    AWEKAS - Ende der Einstellungen    ###################################################
+ #############################################################################################
 
 ###  Ende Usereinstellungen
 ###EoF
