--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -196,7 +196,7 @@
   #AWEKAS aktivieren [true/false] / default: false
    use_awekas=false
 
-  #AWEKAS Login Username und Password
+  #AWEKAS Login Username und Passwort
    AWEKAS_USER=
    AWEKAS_PW=
 
