--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.21.0 -----------------------------------------------------------
+### Settings V2.22.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -19,7 +19,7 @@
  #Protokoll der Wetterstation [1/2/9] / 1=Wunderground ; 2=Ecowitt ; 9=DNS / default: 2
   WS_PROTOKOLL=2
 
- #Anzahl der vorhandenen Zusatzsensoren / default: 0
+ #Anzahl der vorhandenen Zusatzsensoren Froggit, Ecowitt und Bresser / default: 0
   ANZAHL_WH31=0
   ANZAHL_WS90=0
   ANZAHL_DP10=0
@@ -32,6 +32,7 @@
   ANZAHL_DP200=0
   ANZAHL_DP250=0
   ANZAHL_DP300=0
+  ANZAHL_7009999=0
 
  #Protokoll (HTTP oder HTTPS) / default: HTTP
   WEB=HTTP
