--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V2.22.0 -----------------------------------------------------------
+### Settings V3.0.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -54,15 +54,17 @@
   WS_ID=ZuHause
 
  #wo sollen die Datenobjekte abgelegt werden
-  PRE_DP=javascript.0.Wetterstation
+  PRE_DP=0_userdata.0.Wetterstation
 
  #InfluxDB-Konfiguration / ohne InfluxDB alles leer lassen
+  #Protokoll (HTTP oder HTTPS) / default: HTTP
+   INFLUX_WEB=HTTP
   #IP und Port der API [xxx.xxx.xxx.xxx:xxxxx]
    INFLUX_API=
-  #Name, User und Passwort der InfluxDB-Datenbank
-   INFLUX_DB=
-   INFLUX_USER=
-   INFLUX_PASSWORD=
+  #Bucket, Token und Organisation der InfluxDB
+   INFLUX_BUCKET=
+   INFLUX_TOKEN=
+   INFLUX_ORG=
 
  #letztes Regenereignis als [DATUM], [UNIX]-Timestamp oder [DIFF]erenz ("vor xx Tagen")
  # DATUM = 28.04.2020 13:12
