--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V3.0.0 -----------------------------------------------------------
+### Settings V3.2.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -205,6 +205,23 @@
 
  #############################################################################################
  ###    AWEKAS - Ende der Einstellungen    ###################################################
+ #############################################################################################
+
+
+
+ #############################################################################################
+ ###    WOW - Einstellungen (nur nötig falls WOW benutzt werden soll)                      ###
+ #############################################################################################
+
+  #WOW aktivieren [true/false] / default: false
+   use_wow=false
+
+  #WOW Site ID und Authentication Key
+   WOW_SITEID=
+   WOW_AUTHKEY=
+
+ #############################################################################################
+ ###    WOW - Ende der Einstellungen    ######################################################
  #############################################################################################
 
 ###  Ende Usereinstellungen
