--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V3.5.0 -----------------------------------------------------------
+### Settings V3.5.1 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -166,7 +166,7 @@
    windy_APIKey=
 
   #Station [number: 0 - 2147483647] / default: 0
-   windy_Station=
+   windy_Station=0
 
   #Name der Station [Text]
    windy_Name=
