--- a/wetterstation.conf
+++ b/wetterstation.conf
@@ -1,4 +1,4 @@
-### Settings V3.5.2 -----------------------------------------------------------
+### Settings V3.6.0 -----------------------------------------------------------
  #Debuging einschalten [true/false] / default: false / Ausgabe der Messwerte
   debug=false
 
@@ -21,6 +21,8 @@
 
  #Anzahl der vorhandenen Zusatzsensoren Froggit, Ecowitt und Bresser / default: 0
   ANZAHL_WH31=0
+  ANZAHL_WH40H=0
+  ANZAHL_WS80=0
   ANZAHL_WS90=0
   ANZAHL_DP10=0
   ANZAHL_DP35=0
